Edited wiki page ModelisationBasics through web user interface.

--- a/wiki/ModelisationBasics.wiki
+++ b/wiki/ModelisationBasics.wiki
@@ -1,4 +1,5 @@
 #summary Basic tools to build triangulations
+#labels ID-1
 
 The first thing you will want is to create an empty mesh and populate with constraints.
 
