--- a/wiki/ModelisationBitmapBata.wiki
+++ b/wiki/ModelisationBitmapBata.wiki
@@ -26,6 +26,6 @@ bitmapData.draw(shape);
 var object:DDLSObject = DDLSBitmapObjectFactory.buildFromBmpData(bitmapData);
 }}}
 
-Because the underlying implementation uses the Potrace algorithm, you should remember to use images made from 2 colors only: black (0x000000) and white (0xFFFFFF). If your image contains other colors, a threshold will be applied and any color different from white will be considered as black.
+Because the underlying implementation is inspired by the Potrace algorithm, you should remember to use images made from 2 colors only: black (0x000000) and white (0xFFFFFF). If your image contains other colors, a threshold will be applied and any color different from white will be considered as black.
 
 As a recommendation, you should be careful about the size of the images you use. High resolution images can lead to a long time to process.
