Edited wiki page ModelisationBasics through web user interface.

--- a/wiki/ModelisationBasics.wiki
+++ b/wiki/ModelisationBasics.wiki
@@ -21,6 +21,7 @@ var mesh:DDLSMesh = DDLSRectMeshFactory.buildRectangle(600, 400);
 }}}
 
 The result is an instance of `DDLSMesh` as a 2 polygons rectangle of size 600x400:
+
 https://daedalus-lib.googlecode.com/svn/wiki/img/page1/rect_mesh.jpg
 
 Meshes implements coordinates space (x, y) with rules:
@@ -73,6 +74,7 @@ mesh.insertObject(object);
 }}}
 
 Result:
+
 https://daedalus-lib.googlecode.com/svn/wiki/img/page1/insert_square.jpg
 
 Daedalus Lib manages AABB clipping and your inserted `DDLSObject` instance can safely be partly or completely outside of the mesh bounds.
@@ -110,6 +112,10 @@ object.y = 200;
 
 mesh.insertObject(object);
 }}}
+
+Result:
+
+https://daedalus-lib.googlecode.com/svn/wiki/img/page1/transform_square.jpg
 
 When transformations are set before insertion, they are automatically applied.
 
