--- a/wiki/ModelisationBitmapData.wiki
+++ b/wiki/ModelisationBitmapData.wiki
@@ -12,6 +12,9 @@ You can use the following static to create new `DDLSObject` instances from image
 example:
 
 {{{
+// build a rectangle mesh
+var mesh:DDLSMesh = DDLSRectMeshFactory.buildRectangle(600, 400);
+
 // we draw a black circle on Shape
 var shape:Shape = new Shape();
 shape.graphics.beginFill(0x000000);
@@ -24,7 +27,22 @@ bitmapData.draw(shape);
 
 // finally build the DDLSObject instance from the BitmapData
 var object:DDLSObject = DDLSBitmapObjectFactory.buildFromBmpData(bitmapData);
+
+// insert, tranform and update opbject
+mesh.insertObject(object);
+object.x = 100;
+object.y = 100;
+mesh.updateObjects();
+
+// display
+var view:DDLSSimpleView = new DDLSSimpleView();
+addChild(view.surface);
+view.drawMesh(mesh);
 }}}
+
+result:
+
+https://daedalus-lib.googlecode.com/svn/wiki/img/page3/circle_bitmap.jpg
 
 Because the underlying implementation is inspired by the Potrace algorithm, you should remember to use images made from 2 colors only: black (0x000000) and white (0xFFFFFF). If your image contains other colors, a threshold will be applied and any color different from white will be considered as black.
 
