--- a/wiki/ModelisationBitmapData.wiki
+++ b/wiki/ModelisationBitmapData.wiki
@@ -47,3 +47,7 @@ https://daedalus-lib.googlecode.com/svn/wiki/img/page3/circle_bitmap.jpg
 Because the underlying implementation is inspired by the Potrace algorithm, you should remember to use images made from 2 colors only: black (0x000000) and white (0xFFFFFF). If your image contains other colors, a threshold will be applied and any color different from white will be considered as black.
 
 As a recommendation, you should be careful about the size of the images you use. High resolution images can lead to a long time to process.
+
+black and white image example:
+
+https://daedalus-lib.googlecode.com/svn/wiki/img/page3/supernull_nb.png
