--- a/wiki/Pathfinding.wiki
+++ b/wiki/Pathfinding.wiki
@@ -45,6 +45,10 @@ Then you need a path container ; an empty `Vector.<Number>` that will contain th
 
 Then, run the `findpath` method, giving destination coordinates and the path container as arguments. The path is solved from the current entity position.
 
+example of path:
+
+https://daedalus-lib.googlecode.com/svn/wiki/img/page4/path.jpg
+
 As a result, the path container should now list the coordinates of the path as pairs of (x, y) values. In consequence, a way to trace the path would be:
 
 {{{
