Edited wiki page Overview through web user interface.

--- a/wiki/Overview.wiki
+++ b/wiki/Overview.wiki
@@ -11,12 +11,15 @@ So Daedalus Lib is at first a library about 'fully dynamic constrained Delaunay 
 
 For people having pathfinding in mind and being not expert on computational geometry concepts, I hope Daedalus Lib will keep the complexity inside the box and give them simple tools to request pathfinding.
 
- * (1) [https://dl.dropboxusercontent.com/u/84854464/totologic/thesis_demyen_2006.pdf Efficient Triangulation-Based Pathfinding by Douglas Jon Demyen]
- * (2) [https://dl.dropboxusercontent.com/u/84854464/totologic/fully_dynamic_constrained_delaunay_triangulation.pdf Fully Dynamic Constrained Delaunay Triangulations by Kallmann, Bieri and Thalmann]
- * (3) [https://dl.dropboxusercontent.com/u/84854464/totologic/An%20Improved%20Incremental%20Algorithm%20for%20Constructing.pdf An improved incremental algorithm for constructing... by Marc Vigo Anglada]
-
 ===How do I begin ?===
 
 First, you must be able to build a triangulation that reflect your level design. This is because the pathfinding methods in Daedalus Lib can only be requested on triangulations implemented in Daedalus Lib itself.
 
 It doesn't mean that Daedalus Lib must be your primary level data structure. You can for example update a Daedalus Lib triangulation from a tile based level structure or a physic engine instance. Daedalus Lib is designed to be complementary and it implements convenient methods allowing you to maintain a triangulation while your main game engine is running.
+
+----
+
+Références:
+ * (1) [https://dl.dropboxusercontent.com/u/84854464/totologic/thesis_demyen_2006.pdf Efficient Triangulation-Based Pathfinding by Douglas Jon Demyen]
+ * (2) [https://dl.dropboxusercontent.com/u/84854464/totologic/fully_dynamic_constrained_delaunay_triangulation.pdf Fully Dynamic Constrained Delaunay Triangulations by Kallmann, Bieri and Thalmann]
+ * (3) [https://dl.dropboxusercontent.com/u/84854464/totologic/An%20Improved%20Incremental%20Algorithm%20for%20Constructing.pdf An improved incremental algorithm for constructing... by Marc Vigo Anglada]
