Edited wiki page Overview through web user interface.

--- a/wiki/Overview.wiki
+++ b/wiki/Overview.wiki
@@ -1,4 +1,4 @@
-#summary Overview of the concepts involved in Daedalus Lib
+#summary Introduction
 #labels ID-0
 
 ===What is Daedalus Lib about ?===
